--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -34,6 +34,7 @@
         android:text="Back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="clickBack"
         android:id="@+id/button"
         android:layout_alignParentBottom="true" />
 
